--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ li > .icon > img {
 .title {
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0;
+	margin: 0 0.35rem;
 }
 .title > ::before {
 	content: '\00a0•\00a0';
