--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+	background: var(--background-color);
+	color: var(--color);
+	text-shadow: 0.1px 0.1px var(--color);
+}
+
 html {
 	width: 100%;
 	height: 100%;
@@ -9,8 +15,6 @@ html {
 	--coming-soon-color: #eeaaaa;
 	--a-text-decoration: underline #666666;
 
-	background: var(--background-color);
-	color: var(--color);
 	font-family: 'Fira Code', Consolas, 'Courier New', Courier, monospace;
 	font-size: 16pt;
 	text-align: center;
@@ -23,7 +27,6 @@ body {
 	justify-content: stretch;
 	align-items: stretch;
 }
-
 
 a, a:link, a:hover, a:visited, a:active {
 	display: inline-block;
@@ -54,7 +57,6 @@ li {
 	margin: 2rem 0;
 	list-style: none;
 	position: relative;
-	color: var(--color);
 }
 li > .icon {
 	position: absolute;
@@ -126,7 +128,6 @@ header {
 footer {
     position: sticky;
     bottom: 0;
-	background: var(--background-color);
 
 	display: flex;
 
@@ -138,7 +139,7 @@ footer {
 footer > * {
 	padding: 0.2rem;
 	flex: 1;
-	background: var(--light-background-color);
+	--background-color: var(--light-background-color);
 }
 
 coming-soon {
